@@ -464,6 +464,7 @@ BEGIN
 
 	DELETE FROM acc_trans WHERE trans_id = ANY(t_transaction_ids);
 	DELETE FROM ap WHERE id = ANY(t_transaction_ids);
+	DELETE FROM ar WHERE id = ANY(t_transaction_ids);
 	DELETE FROM gl WHERE id = ANY(t_transaction_ids);
 	DELETE FROM voucher WHERE batch_id = in_batch_id;
 	DELETE FROM payments_queue WHERE batch_id = in_batch_id;
