@@ -14,6 +14,8 @@ Changelog for 1.3.36
 * Fixing receipts listing "to pay" for amount (Chris T, 892)
 * Setting->get() now works with named keys (Chris T)
 * nginx sample configurations (P. Istvan)
+* Fixed unable to delete ar vouchers (Chris T)
+* Fixed copy to new scrambling lines (Chris T, 923)
 
 Chris T is Chris Travers
 Nick P is Nick Prater
